fix: 사이드바 템플릿 부분 제거, 불필요한 코드 삭제, 페이징처리 보완

--- a/myadminpage/src/main/resources/templates/admin.mustache
+++ b/myadminpage/src/main/resources/templates/admin.mustache
@@ -1,7 +1,5 @@
 {{>layout/header}}
 
-<link rel="stylesheet" type="text/css" href="/css/admin.css">
-
 <section id="wrapper">
 
     <nav class="navbar navbar-expand-md">
@@ -41,11 +39,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="iconify" data-icon="uil-bell"></i><span>98</span></a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#">-->
-<!--&lt;!&ndash;                            <i data-show="show-side-navigation1" class="iconify uil-bars show-side-btn"></i>&ndash;&gt;-->
-<!--                        </a>-->
-<!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i data-show="show-side-navigation1" class="iconify show-side-btn" data-icon="uil-bars"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
