--- a/myadminpage/src/main/resources/static/css/admin.css
+++ b/myadminpage/src/main/resources/static/css/admin.css
@@ -1,7 +1,7 @@
 @import 'https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet';
 
 :root {
-	--dk-gray-100: #F3F4F6;
+    --dk-gray-100: #F3F4F6;
 	--dk-gray-200: #E5E7EB;
 	--dk-gray-300: #D1D5DB;
 	--dk-gray-400: #9CA3AF;
@@ -13,6 +13,8 @@
 	--dk-dark-bg: #313348;
 	--dk-darker-bg: #2a2b3d;
 	--navbar-bg-color: #6f6486;
+	--sidebar-bg-color: #252636;
+    --sidebar-width: 250px;
 }
 
 * {
@@ -27,7 +29,14 @@ body {
 	font-size: .925rem;
 }
 
+#wrapper {
+	margin-left: var(--sidebar-width);
+	transition: all .3s ease-in-out;
+}
 
+#wrapper.fullwidth {
+	margin-left: 0;
+}
 
 
 
@@ -143,8 +152,6 @@ body {
 	text-align: right;
 	border-radius: 50%;
 }
-
-
 
 
 
