--- a/myadminpage/src/main/resources/templates/layout/header.mustache
+++ b/myadminpage/src/main/resources/templates/layout/header.mustache
@@ -8,6 +8,7 @@
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/admin.css">
 </head>
 <body>
+{{>layout/side}}
