--- a/myadminpage/src/main/resources/templates/loginForm.mustache
+++ b/myadminpage/src/main/resources/templates/loginForm.mustache
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/loginForm.css">
 </head>
 <body>
 <div class="login">
